[package]
authors = ['TeaRust']
description = 'genesis bank pallet'
edition = '2018'
homepage = 'https://teaproject.org'
license = 'GPL-3.0'
name = 'pallet-genesis-bank'
readme = 'README.md'
repository = 'https://github.com/tearust/tea-camellia'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# external dependencies
log = "0.4.8"
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0'}

# Substrate dependencies
sp-std = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '83808aa'}
sp-core = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '83808aa'}
sp-io = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '83808aa'}
frame-support = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '83808aa'}
frame-system = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '83808aa'}
pallet-randomness-collective-flip = { default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '83808aa' }
sp-runtime = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '83808aa'}

# Only used in benchmarking to generate random contract code
frame-benchmarking = {default-features = false, optional = true, version = '3.1.0', git = 'https://github.com/paritytech/substrate.git', rev = '83808aa'}
hex = {default-features = false, optional = true, version = '0.4.3'}

genesis-bank-interface = { path = "./interface", default-features = false }
auction-interface = { path = "../auction/interface", default-features = false }
pallet-cml = { path = "../cml", version="3.0.0", default-features = false }
pallet-utils = {default-features = false, version = '0.0.1', path = '../utils'}

[dev-dependencies]
serde = '1.0.119'
hex-literal = "0.3.1"
ed25519-dalek = "1.0.0"
rand = '0.7.2'
node-primitives = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '83808aa'}
pallet-balances = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '83808aa' }
genesis-exchange-interface = { path = "../genesis-exchange/interface" }
tea-interface = { path = "../tea/interface" }
bonding-curve-interface = { path = "../bonding-curve/interface" }

[features]
default = ['std']
runtime-benchmarks = [
	'frame-benchmarking',
	'hex',
]
std = [
	'codec/std',
	'sp-std/std',
	'sp-core/std',
    'sp-io/std',
	'sp-runtime/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'pallet-cml/std',
	'pallet-utils/std',
	'genesis-bank-interface/std',
	'auction-interface/std',
]
try-runtime = ['frame-support/try-runtime']
