[package]
authors = ['TeaRust']
description = 'bonding curve pallet'
edition = '2021'
homepage = 'https://teaproject.org'
license = 'GPL-3.0'
name = 'pallet-tea-erc20'
readme = 'README.md'
repository = 'https://github.com/tearust/tea-camellia'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# external dependencies
log = "0.4.14"
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '3.1'}
scale-info = { version = "2.1", default-features = false, features = ["derive"] }

# Substrate dependencies
sp-std = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sp-core = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sp-io = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
frame-support = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
frame-system = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sp-runtime = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}

# Only used in benchmarking to generate random contract code
frame-benchmarking = {default-features = false, optional = true, git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
hex = {default-features = false, optional = true, version = '0.4.3'}

pallet-utils = {default-features = false, version = '0.0.1', path = '../utils'}

[dev-dependencies]
serde = '1.0.119'
hex-literal = "0.3.1"
ed25519-dalek = "1.0.0"
rand = '0.7.2'
node-primitives = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3' }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3' }

[features]
default = ['std']
runtime-benchmarks = [
	'frame-benchmarking',
	'hex',
]
std = [
	'codec/std',
	'sp-std/std',
	'sp-core/std',
  'sp-io/std',
	'sp-runtime/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'pallet-utils/std',
]
try-runtime = ['frame-support/try-runtime']
