[package]
authors = ['TeaRust']
description = 'utils pallet'
edition = '2021'
homepage = 'https://teaproject.org'
license = 'GPL-3.0'
name = 'pallet-utils'
readme = 'README.md'
repository = 'https://github.com/tearust/tea-camellia'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# external dependencies
codec = {default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '3.1'}
scale-info = { version = "2.1", default-features = false, features = ["derive"] }

# Substrate dependencies
sp-std = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
sp-core = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
sp-io = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
frame-support = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
frame-system = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-randomness-collective-flip = { default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0' }
sp-runtime = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}

# Only used in benchmarking to generate random contract code
frame-benchmarking = {default-features = false, optional = true, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
hex = {default-features = false, optional = true, version = '0.4.3'}

[dev-dependencies]
serde = '1.0.119'
hex-literal = "0.3.1"
ed25519-dalek = "1.0.0"
rand = '0.7.2'
node-primitives = { version = "2.0.0", git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
pallet-balances = { git = 'https://github.com/tearust/substrate.git', branch = 'v4.0' }

[features]
default = ['std']
runtime-benchmarks = [
	'frame-benchmarking',
	'hex',
]
std = [
	'codec/std',
	'scale-info/std',
	'sp-std/std',
	'sp-core/std',
    'sp-io/std',
	'sp-runtime/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
]
try-runtime = ['frame-support/try-runtime']
