[package]
name = "bizsim"
version = "0.1.0"
authors = ["Yan Mingzhi <realraindust@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
clap = "3.0.0-beta.2"
log = "0.4.14"
env_logger = "0.8.4"
node-primitives = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}

pallet-cml = { path = '../../pallets/cml' }