[package]
name = "cmlsim"
version = "0.1.0"
authors = ["Yan Mingzhi <realraindust@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
log = "0.4.14"
env_logger = "0.8.4"
codec = { package = "parity-scale-codec", version = "2.0.0" }
sp-runtime = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f' }
sp-core = {version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f' }
sp-io = {version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
frame-support = { version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
frame-system = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f' }
node-primitives = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}

pallet-balances = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f' }
pallet-cml = { path = '../../pallets/cml' }
pallet-utils = { path = '../../pallets/utils'}
staking-economics = { path = '../../pallets/cml/staking-economics'}
genesis-exchange-interface = { path = "../../pallets/genesis-exchange/interface" }

