[package]
name = "bonding-curve-impl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-std = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '83808aa'}
sp-runtime = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '83808aa' }
node-primitives = { version = "2.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '83808aa'}
frame-support = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '83808aa'}

bonding-curve-interface = {default-features = false, path = "../interface" }

[features]
default = ["std"]
std = [
    "sp-std/std",
    "sp-runtime/std",
    "node-primitives/std",
    "frame-support/std",
    "bonding-curve-interface/std",
]

