[package]
name = "bonding-curve-impl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-std = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8' }
node-primitives = { version = "2.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
frame-support = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}

bonding-curve-interface = {default-features = false, path = "../interface" }

[features]
default = ["std"]
std = [
    "sp-std/std",
    "sp-runtime/std",
    "node-primitives/std",
    "frame-support/std",
    "bonding-curve-interface/std",
]

