[package]
name = "bounding-curve-impl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-std = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
sp-runtime = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f' }
node-primitives = { version = "2.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}

bounding-curve-interface = { path = "../interface" }

[dev-dependencies]
rand = '0.7.2'

[features]
default = ["std"]
std = [
    "sp-std/std",
    "sp-runtime/std",
    "node-primitives/std",
    "bounding-curve-interface/std",
]

