[package]
name = "cml-rpc"
version = "0.1.0"
authors = ["Yan Mingzhi <realraindust@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1" }
serde = { version = "1.0", features = ["derive"] }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"

node-primitives = { version = "2.0.0", git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
sp-api = { git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
sp-blockchain = { git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
sp-rpc = { git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
sp-runtime = { git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}

cml-runtime-api = { path = '../runtime-api'}

[dev-dependencies]
rmp-serde = "0.14.3"

