[package]
name = "staking-economics"
version = "0.1.0"
authors = ["Yan Mingzhi <realraindust@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-std = {default-features = false, version = '3.0.0', git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f'}
sp-runtime = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '90cfb952f' }

pallet-cml = {default-features = false, path = '../../cml'}

[features]
default = ["std"]
std = [
    "sp-std/std",
    "sp-runtime/std",
    "pallet-cml/std",
]

