[package]
name = "staking-economics"
version = "0.1.0"
authors = ["Yan Mingzhi <realraindust@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-std = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
sp-runtime = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8' }
node-primitives = { version = "2.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}

pallet-cml = {default-features = false, path = '../../cml'}

[dev-dependencies]
rand = '0.7.2'

[features]
default = ["std"]
std = [
    "sp-std/std",
    "sp-runtime/std",
    "node-primitives/std",
    "pallet-cml/std",
]

