[package]
name = "genesis-bank-runtime-api"
version = "0.1.0"
authors = ["Yan Mingzhi <realraindust@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = {default-features = false,  package = "parity-scale-codec", version = "2.0.0" }
sp-api = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '7f41e24f5'}
sp-std = { default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '7f41e24f5' }
node-primitives = { version = "2.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '7f41e24f5'}

[features]
default = ["std"]
std = [
    'codec/std',
    'sp-api/std',
    'sp-std/std',
    'node-primitives/std',
]