[package]
name = "machine-rpc"
version = "0.1.0"
authors = ["Yan Mingzhi <realraindust@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = {default-features = false, package = "parity-scale-codec", version = "2.0.0" }
jsonrpc-core = '18.0.0'
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
serde = { version = "1.0", features = ["derive"], optional = true }

node-primitives = { version = "2.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
sp-api = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
sp-core = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
sp-blockchain = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
sp-rpc = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}
sp-runtime = {default-features = false, git = 'https://github.com/paritytech/substrate.git', rev = '558a68f8'}

machine-runtime-api = {default-features = false, path = '../runtime-api'}

[dev-dependencies]
rmp-serde = "0.14.3"

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "sp-api/std",
    "sp-core/std",
    "sp-runtime/std",
    "node-primitives/std",
    "machine-runtime-api/std"
]
