[package]
name = "machine-rpc"
version = "0.1.0"
authors = ["Yan Mingzhi <realraindust@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = {package = "parity-scale-codec", version = "3.1" }
jsonrpsee = { version = "0.14.0", features = ["server", "macros"] }
serde = { version = "1.0", features = ["derive"], optional = true }

node-primitives = { version = "2.0.0", git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sp-api = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sp-core = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sp-blockchain = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sp-rpc = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', rev = '6a946fc3'}

machine-runtime-api = { path = '../runtime-api'}

[dev-dependencies]
rmp-serde = "0.14.3"

