[package]
name = "machine-runtime-api"
version = "0.1.0"
authors = ["Yan Mingzhi <realraindust@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = {default-features = false,  package = "parity-scale-codec", version = "3.1" }
sp-api = {default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}
sp-std = { default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0' }
sp-core = { default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0' }
node-primitives = { version = "2.0.0", default-features = false, git = 'https://github.com/tearust/substrate.git', branch = 'v4.0'}

[features]
default = ["std"]
std = [
    'codec/std',
    'sp-api/std',
    'sp-std/std',
    'sp-core/std',
    'node-primitives/std',
]